--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn AI Detector",
-  "description": "Detects AI-generated content in LinkedIn posts.",
+  "description": "Detects the amount of AI-generated content on LinkedIn posts.",
   "version": "0.1.2",
   "permissions": ["activeTab", "scripting", "storage"],
   "host_permissions": ["https://www.linkedin.com/*"],
